TEST_PROGRAMS/INVALID/12/parser_declaration_invalid2.go
/* syntax errors for declarations */
/* double use of var keyword */
package basic

var ( 
	var x = 10
)

func foo (x int) {
	println(x)
}
